tests/test180.rael.exp
Error [tests/test180.rael:2:17]: Unexpected amount of arguments
| log :Types:Range()
|                 ^
